Безопасность. Подключаем аутентификацию и авторизацию в приложении
